fix video ads hidden behind page elements (#825)

--- a/src/ad-products/styles/_porvata.scss
+++ b/src/ad-products/styles/_porvata.scss
@@ -129,6 +129,10 @@ $vpaid-z-index: 10;
 		}
 
 		&.outstream-floating {
+			.porvata-container {
+				z-index: 1;
+			}
+
 			.button-close {
 				background: transparent;
 				border: none;
